--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "authentication-validate",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "author": "Actano GmbH",
   "license": "ISC",
   "dependencies": {
