--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "authentication-validate",
+  "name": "@wndltz/authentication-validate",
   "version": "0.0.1",
   "description": "",
   "main": "src/index.js",
