--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@wndltz/authentication-validate",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
   "main": "lib/index.js",
+  "module": "src/index.js",
   "author": "Actano GmbH",
   "license": "ISC",
   "files": [
