--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-flow": "^7.0.0",
     "@babel/runtime": "^7.1.5",
+    "@rplan/config": "^1.2.0",
     "jsonwebtoken": "^8.3.0"
   }
 }
